fix styling on mobile size messages page

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1,6 +1,6 @@
 //Main CSS
 body{
-  background-color: #3b3b3b;
+  background-color: #e9e9e9;
 }
 
 .page-title{
@@ -10,10 +10,13 @@ body{
 }
 
 //Nav Bar
+.message-icon img{
+  width: 10%;
+}
 .message{
   width: 10%;
   margin-top: 2%;
-  margin-left: 3%;
+  margin-left: 5%;
   display: inline;
 }
 
@@ -338,11 +341,104 @@ nav#nav-mobile ul{
 
 nav#nav-mobile li{
   display: block;
-  border-bottom: solid 1px #72cd53;
+  border-bottom: solid 3px #00aca1;
+  padding-bottom: 2%;
+  padding-top: 2%;
   &:last-child{
     border-bottom: none;
   }
 }
+
+//-------------Mobile Screen Messages Page----------------//
+#show-inbox-button{
+  margin-left: 5%;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  width: 40%;
+  background-color: #6A6A6A;
+  border-radius: 5px;
+}
+#sent_message_show{
+  margin-left: 7%;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  width: 43%;
+  background-color: #6A6A6A;
+  border-radius: 5px;
+}
+
+.unread{
+  float: right;
+  margin-right: 5%;
+  margin-top: -1%;
+  font-size: 1.2rem;
+}
+
+.unread-checkbox{
+  float: right;
+  margin-right: -2%;
+}
+
+#message_message{
+  margin-top: 2.5%;
+}
+
+.reply{
+  background-color: #00aca1;
+  border: 0;
+  border-radius: $button-border-radius;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-family: $base-font-family;
+  font-size: $base-font-size;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 600;
+  line-height: 1;
+  padding: $small-spacing $base-spacing;
+  transition: background-color $base-duration $base-timing;
+  vertical-align: middle;
+  white-space: nowrap;
+  margin-top: 2.5%;
+
+  &:hover,
+  &:focus {
+    background-color: shade(#a9a9a9, 20%);
+    color: #fff;
+  }
+}
+
+input#message_subject_line{
+  background-color: white;
+  height: 2rem;
+}
+textarea#message_message{
+  height: 3rem;
+  background-color: white;
+}
+
+.recipient_id{
+  color: #3b3b3b;
+}
+
+.subject_line{
+  color: #3b3b3b;
+}
+
+.sent_by{
+  color: #3b3b3b;
+}
+
+.reply_message{
+  margin-top: 2%;
+}
+
+.reply-name{
+  color: #3b3b3b;
+}
+
+
+
 
 
 @media all and (max-width: 900px) {
@@ -358,6 +454,15 @@ nav#nav-mobile li{
     display: block;
   }
 }
+
+
+
+
+
+//--------Desktop Size------------//
+
+
+
 
 @include media ($large-screen-up){
   body{
@@ -447,7 +552,7 @@ nav#nav-mobile li{
   .send-message-profile p{
     font-size: 1.2rem;
     color: #00aca1;
-    margin-top: -2%;;
+    margin-top: -2%;
   }
 
   .send-message-profile{
